--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_blankFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
+        <action
+            android:id="@+id/action_blankFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/FirstFragment"
@@ -35,4 +38,8 @@
             android:id="@+id/action_SecondFragment_to_blankFragment"
             app:destination="@id/blankFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="user.nicolai.barapp.SQL.BrugerInterface.LoginFragment"
+        android:label="LoginFragment" />
 </navigation>
