--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -9,14 +9,15 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="25dp"
         android:layout_marginTop="25dp"
+        android:contentDescription="Yes"
+        android:onClick="navigateToFragment1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/_etpgol5vni7a29jfbecupgimi"
-        android:onClick="navigateToFragment1"/>
+        app:srcCompat="@drawable/_etpgol5vni7a29jfbecupgimi" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -37,11 +38,12 @@
         android:layout_marginStart="93dp"
         android:layout_marginEnd="93dp"
         android:layout_marginBottom="129dp"
+        android:contentDescription="Yes"
+        android:onClick="navigateToFragment2"
         android:src="@drawable/__d"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:onClick="navigateToFragment2"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
