--- a/app/src/main/res/layout/fragment_booze.xml
+++ b/app/src/main/res/layout/fragment_booze.xml
@@ -14,99 +14,126 @@
         android:id="@+id/imageView6"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="25dp"
         android:contentDescription="Yes"
-        app:srcCompat="@drawable/_etpgol5vni7a29jfbecupgimi"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="26dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/_etpgol5vni7a29jfbecupgimi" />
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="358dp"
         android:layout_height="55dp"
-        app:srcCompat="@color/design_default_color_background"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="128dp" />
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="27dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@color/design_default_color_background" />
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="358dp"
         android:layout_height="55dp"
-        app:srcCompat="@color/design_default_color_background"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="237dp" />
+        android:layout_marginTop="235dp"
+        android:layout_marginEnd="27dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@color/design_default_color_background" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="80dp"
         android:layout_height="31dp"
+        android:layout_marginTop="138dp"
+        android:layout_marginEnd="47dp"
         android:text="0"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="286dp"
-        tools:layout_editor_absoluteY="139dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="358dp"
         android:layout_height="55dp"
-        app:srcCompat="@color/design_default_color_background"
-        tools:layout_editor_absoluteX="27dp"
-        tools:layout_editor_absoluteY="346dp" />
+        android:layout_marginTop="347dp"
+        android:layout_marginEnd="27dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@color/design_default_color_background" />
 
     <ImageView
         android:id="@+id/imageView10"
         android:layout_width="358dp"
         android:layout_height="55dp"
-        app:srcCompat="@color/design_default_color_background"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="453dp" />
+        android:layout_marginTop="449dp"
+        android:layout_marginEnd="27dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@color/design_default_color_background" />
 
     <ImageView
         android:id="@+id/imageView11"
         android:layout_width="358dp"
         android:layout_height="55dp"
-        app:srcCompat="@color/design_default_color_background"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="560dp" />
+        android:layout_marginTop="556dp"
+        android:layout_marginEnd="27dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@color/design_default_color_background" />
 
     <SeekBar
         android:id="@+id/seekBar2"
         android:layout_width="259dp"
-        android:layout_height="56dp"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="463dp" />
+        android:layout_height="55dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="449dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <SeekBar
         android:id="@+id/seekBar5"
         android:layout_width="259dp"
-        android:layout_height="56dp"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="565dp" />
+        android:layout_height="55dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="556dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <SeekBar
         android:id="@+id/seekBar6"
         android:layout_width="259dp"
-        android:layout_height="56dp"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="127dp" />
+        android:layout_height="55dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="128dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <SeekBar
         android:id="@+id/seekBar3"
         android:layout_width="259dp"
         android:layout_height="56dp"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="236dp" />
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="235dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <SeekBar
         android:id="@+id/seekBar4"
         android:layout_width="259dp"
-        android:layout_height="56dp"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="357dp" />
+        android:layout_height="55dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="347dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="132dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="35dp"
         android:background="#000000"
         android:backgroundTint="@color/black"
         android:backgroundTintMode="add"
@@ -114,44 +141,53 @@
         android:outlineProvider="paddedBounds"
         android:text="Lav min drink"
         app:iconTint="#FFFFFF"
-        tools:layout_editor_absoluteX="132dp"
-        tools:layout_editor_absoluteY="648dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:text="Lav min drink" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="80dp"
         android:layout_height="31dp"
+        android:layout_marginTop="246dp"
+        android:layout_marginEnd="47dp"
         android:text="0"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="286dp"
-        tools:layout_editor_absoluteY="260dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="80dp"
         android:layout_height="31dp"
+        android:layout_marginTop="358dp"
+        android:layout_marginEnd="47dp"
         android:text="0"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="286dp"
-        tools:layout_editor_absoluteY="357dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="80dp"
         android:layout_height="31dp"
+        android:layout_marginTop="458dp"
+        android:layout_marginEnd="47dp"
         android:text="0"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="286dp"
-        tools:layout_editor_absoluteY="464dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="80dp"
         android:layout_height="31dp"
+        android:layout_marginTop="566dp"
+        android:layout_marginEnd="47dp"
         android:text="0"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="286dp"
-        tools:layout_editor_absoluteY="571dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
