--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -9,8 +9,8 @@
 
     <TextView
         android:id="@+id/textview_first"
-        android:layout_width="432dp"
-        android:layout_height="160dp"
+        android:layout_width="358dp"
+        android:layout_height="133dp"
         android:layout_marginTop="384dp"
         android:fontFamily="@font/oswald_bold"
         android:text="@string/hello_first_fragment"
@@ -50,8 +50,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="73dp"
+        android:layout_marginTop="66dp"
+        android:layout_marginEnd="73dp"
         android:layout_marginBottom="20dp"
         android:src="@drawable/boozebotlogo"
         app:layout_constraintBottom_toTopOf="@+id/textview_first"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
